--- a/src/app/pages/function-editor/containers/function-editor/function-editor.component.html
+++ b/src/app/pages/function-editor/containers/function-editor/function-editor.component.html
@@ -5,12 +5,14 @@
   <div class="row">
     <div class="col-8">
       <mat-card>
-        <div class="alert h2-notification">
+        <!-- <div class="alert h2-notification">
           The expression defines how the indicator is calculated. Tip: use
           d2:condition('bool-expr',true-val,false-val) d2:daysBetween(date,date)
           d2:zing(x) d2:oizp(x)
-        </div>
-        <app-indicator-expression-form></app-indicator-expression-form>
+        </div> -->
+        <app-indicator-expression-form
+          [editorMode]="editorMode"
+        ></app-indicator-expression-form>
         <div *ngIf="expressionStatus">
           <app-indicator-expression-validator></app-indicator-expression-validator>
         </div>
@@ -18,8 +20,17 @@
     </div>
     <div class="col-4">
       <mat-tab-group mat-stretch-tabs>
-        <mat-tab label="Fields"> Content 1 </mat-tab>
-        <mat-tab label="Second"> Content 2 </mat-tab>
+        <mat-tab label="Fields">
+          <mat-action-list class="field-item" *ngFor="let field of fields">
+            <button
+              mat-list-item
+              style="font-size: 10px"
+              (click)="onClickField(field)"
+            >
+              {{ field.name }}
+            </button>
+          </mat-action-list>
+        </mat-tab>
       </mat-tab-group>
     </div>
   </div>
