--- a/src/app/pages/function-editor/components/indicator-expression-form/indicator-expression-form.component.html
+++ b/src/app/pages/function-editor/components/indicator-expression-form/indicator-expression-form.component.html
@@ -1,6 +1,7 @@
 <form [formGroup]="editorForm">
   <app-indicator-text-box
     [expressionFormula]="editorForm?.value?.expression"
+    [editorMode]="editorMode"
     (expressionChanged)="onExpressionChanges($event)"
     (cursorPosition)="onGetCursorPosition($event)"
   ></app-indicator-text-box>
@@ -8,7 +9,7 @@
     <div class="col">
       <mat-card-actions>
         <button
-          class="ml-2 mt-1"
+          class="mx-2 mt-1"
           type="button"
           mat-stroked-button
           *ngFor="let button of operations"
