--- a/src/app/pages/function-editor/components/indicator-text-box/indicator-text-box.component.html
+++ b/src/app/pages/function-editor/components/indicator-text-box/indicator-text-box.component.html
@@ -2,6 +2,7 @@
   <div class="col">
     <mat-card-content>
       <textarea
+        id="{{ editorMode }}-textarea"
         class="text-area"
         value="{{ expressionFormula }}"
         (input)="onExpressionChange($event)"
